--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-    "id": "obsidian-focus-mode",
-    "name": "Focus Mode",
-    "version": "1.11.5",
-    "minAppVersion": "0.9.12",
-    "description": "Add Focus Mode to Obsidian.",
-    "author": "ryanpcmcquen",
-    "authorUrl": "https://github.com/ryanpcmcquen",
-    "isDesktopOnly": false
+  "id": "obsidian-focus-mode",
+  "name": "Focus Mode (me)",
+  "version": "1.0.0",
+  "minAppVersion": "0.9.12",
+  "description": "Focus Mode with status bar enabled.",
+  "author": "Laurenzius",
+  "authorUrl": "https://github.com/LaurenzTU/obsidian-focus-mode-forked",
+  "isDesktopOnly": false
 }
