--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "obsidian-focus-mode",
+  "id": "obsidian-focus-mode-laurenzius",
   "name": "Focus Mode (me)",
   "version": "1.0.0",
   "minAppVersion": "0.9.12",
